Second commit my portfolio

--- a/cv.html
+++ b/cv.html
@@ -31,7 +31,9 @@
         <h1>
             About me
         </h1>
-        <p style="text-align: justify;">My name is Fatma, and I'm passionate about technology and innovation, always
+        <img src="pic.jpg" alt="My picture" controls width="300">
+        <p style="text-align: justify;">My name is Fatma, and I'm passionate about
+            technology and innovation, always
             looking for new challenges to
             take on. As a computer engineering student, I enjoy exploring various fields, from programming and databases
             to artificial intelligence. My journey is also shaped by associative and entrepreneurial experiences, where
