--- a/cv.html
+++ b/cv.html
@@ -3,11 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My cv</title>
 </head>
 
 <body>
+    <!--navbar de la page-->
     <nav id="nav">
         <ul type="square">
             <li>
@@ -27,6 +29,7 @@
             </li>
         </ul>
     </nav>
+    <!--Contenu de la page web-->
     <div id="about">
         <h1>
             About me
@@ -93,6 +96,7 @@
     </div>
     <div id="contact">
         <h1>Contact me</h1>
+        <!--formulaire de contact-->
         <form method="post">
             <div>
                 <label for="name:">Name: </label><br>
@@ -157,6 +161,7 @@
         </form>
 
     </div>
+    <!--footer de la page-->
     <footer>
         <p>© 2025 My cv. All rights reserved</p>
         <a href="#nav">Go back to the top</a>
